Fixed email and alignment

--- a/src/containers/ContactUs/ContactUs.css
+++ b/src/containers/ContactUs/ContactUs.css
@@ -42,8 +42,11 @@
 }
 
 .input-container{
-    position: relative;
     margin-top: 143px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
 }
 
 .customer-input-button {
@@ -61,5 +64,5 @@
     line-height: normal;
     position: absolute;
     top:9px;
-    left:590px;
+    left:740px;
 }
